-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.1
-
-
49f7eabea (dev), 909cf1f76 (6.8), dda1b0fde (6.7)
The following demonstrates a regression in layout behaviour between 6.7.0 and 6.7.1:
import QtQuick import QtQuick.Controls import QtQuick.Layouts Window { width: 640 height: 480 visible: true title: qsTr("Qt 6.7.1 Layout Regression") ColumnLayout { anchors.fill: parent ColumnLayout { Text { Layout.preferredWidth: 250 text: "Text Text Text Text Text Text Text Text " + "Text Text Text Text Text Text Text Text " + "Text Text Text Text Text Text Text Text " + "Text Text Text Text Text Text Text Text " + "Text Text Text Text Text Text Text Text " wrapMode: Text.WordWrap } Rectangle { Layout.preferredWidth: 250 Layout.preferredHeight: 10 color: "red" } Rectangle { Layout.preferredWidth: 250 Layout.fillHeight: true color: "green" } } } }