Fix polish issue in the quick layout

The patch 3fa4719789921ff8be440ec760d8b9ab569758eb skip geometry change
of layout items when it has already been invalidated. This can cause
problems when we have nested layouts, as the dirty flag set in the
child layout during invalidate blocks further rearranging its items
(i.e. setting geometry to its items).

This patch fixes it by allowing rearrange when the parent item is a
layout by itself. For other cases (i.e. not the nested layout), the
child layout schedules the polish, and this polish takes care of
further rearranging its items.

Fixes: QTBUG-125481
Change-Id: I86c5b584e27fbe71b3e740fe7b3fdb0f3ac7ae14
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
(cherry picked from commit 49f7eabeac959fb448482bd0a7ebb1b774bc5bcb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 909cf1f76ac477b1cd503ea16e7340f63165861a)