src/quicklayouts/qquicklayout.cpp
@@ -923,7 +923,8 @@ void QQuickLayout::geometryChange(const QRectF &newGeometry, const QRectF &oldGe
 {
     Q_D(QQuickLayout);
     QQuickItem::geometryChange(newGeometry, oldGeometry);
-    if (invalidated() || d->m_disableRearrange || !isReady())
+    if ((invalidated() && !qobject_cast<QQuickLayout *>(parentItem())) ||
+        d->m_disableRearrange || !isReady())
         return;
 
     qCDebug(lcQuickLayouts) << "QQuickLayout::geometryChange" << newGeometry << oldGeometry;
